// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots appearance accent 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-1fqewk1=""
    >
      Some text
    </div>
  </div>
</div>
`;

exports[`Storyshots appearance basic 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-15xc133=""
    >
      Some text
    </div>
  </div>
</div>
`;

exports[`Storyshots onClose accent 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-1dvynd5=""
    >
      <button
        aria-label="Close tooltip"
        data-css-gwpw63=""
        onClick={[Function]}
      >
        <svg
          aria-label="close icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 7.41L16.59 6 12 10.59 7.41 6 6 7.41 10.59 12 6 16.59 7.41 18 12 13.41 16.59 18 18 16.59 13.41 12"
          />
        </svg>
      </button>
      Consectetur adipisicing elit, sed do ab eiusmod tempor incididunt ut
    </div>
  </div>
</div>
`;

exports[`Storyshots onClose basic 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-sbzr3=""
    >
      <button
        aria-label="Close tooltip"
        data-css-18edqe6=""
        onClick={[Function]}
      >
        <svg
          aria-label="close icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 7.41L16.59 6 12 10.59 7.41 6 6 7.41 10.59 12 6 16.59 7.41 18 12 13.41 16.59 18 18 16.59 13.41 12"
          />
        </svg>
      </button>
      Consectetur adipisicing elit, sed do ab eiusmod tempor incididunt ut
    </div>
  </div>
</div>
`;

exports[`Storyshots onClose short text 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-sbzr3=""
    >
      <button
        aria-label="Close tooltip"
        data-css-18edqe6=""
        onClick={[Function]}
      >
        <svg
          aria-label="close icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 7.41L16.59 6 12 10.59 7.41 6 6 7.41 10.59 12 6 16.59 7.41 18 12 13.41 16.59 18 18 16.59 13.41 12"
          />
        </svg>
      </button>
      Short
    </div>
  </div>
</div>
`;

exports[`Storyshots onClose tailPosition topRight 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-185olja=""
    >
      <button
        aria-label="Close tooltip"
        data-css-18edqe6=""
        onClick={[Function]}
      >
        <svg
          aria-label="close icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 7.41L16.59 6 12 10.59 7.41 6 6 7.41 10.59 12 6 16.59 7.41 18 12 13.41 16.59 18 18 16.59 13.41 12"
          />
        </svg>
      </button>
      Consectetur adipisicing elit, sed do ab eiusmod tempor incididunt ut
    </div>
  </div>
</div>
`;

exports[`Storyshots tailPosition accent bottomCenter 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-1iuqbsz=""
    >
      Some text
    </div>
  </div>
</div>
`;

exports[`Storyshots tailPosition accent bottomLeft 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-fy15pr=""
    >
      Some text
    </div>
  </div>
</div>
`;

exports[`Storyshots tailPosition accent bottomRight 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-1ppihb7=""
    >
      Some text
    </div>
  </div>
</div>
`;

exports[`Storyshots tailPosition accent topCenter 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-16v0uz9=""
    >
      Some text
    </div>
  </div>
</div>
`;

exports[`Storyshots tailPosition accent topLeft 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-3ejjc1=""
    >
      Some text
    </div>
  </div>
</div>
`;

exports[`Storyshots tailPosition accent topRight 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-ln62b=""
    >
      Some text
    </div>
  </div>
</div>
`;

exports[`Storyshots tailPosition basic bottomCenter 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-1mt6r4w=""
    >
      Some text
    </div>
  </div>
</div>
`;

exports[`Storyshots tailPosition basic bottomLeft 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-92r485=""
    >
      Some text
    </div>
  </div>
</div>
`;

exports[`Storyshots tailPosition basic bottomRight 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-d9fvoh=""
    >
      Some text
    </div>
  </div>
</div>
`;

exports[`Storyshots tailPosition basic topCenter 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-18sopuo=""
    >
      Some text
    </div>
  </div>
</div>
`;

exports[`Storyshots tailPosition basic topLeft 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-16zinx=""
    >
      Some text
    </div>
  </div>
</div>
`;

exports[`Storyshots tailPosition basic topRight 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-1sk3bps=""
    >
      Some text
    </div>
  </div>
</div>
`;
